@@ -11,6 +11,7 @@
 -revise sprite to optimize.
 -revise vector elementwise object.
 -revise vector operator methods.
+-revise vector object instantiation.
 
 0.32    2022-04-17
 -add key set_repeat method.
